--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,4 +1,3 @@
-
 @charset "utf-8";
 @-webkit-viewport   { width: device-width; }
 @-moz-viewport      { width: device-width; }
@@ -48,32 +47,32 @@ body{
 }
 
 #text-header {
-  position: absolute;
-  top: 50%;
-  left: 35%;
-  transform: translate(-50%,-50%);
+    position: absolute;
+    top: 20%;
 }
 
-#text-header h1{
-  margin: 0;
-  padding: 0%;
-  font-size: 1.4em;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: -0.8px;
-  text-align: left;!important
+#text-header h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 1.3em;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    text-align: left!important;
 }
-#text-header h1::first-line{
-  font-size: 1.5em;
-/*   letter-spacing: -4px; */
-  font-weight: 800;
-  line-height: 2em;
+
+#text-header h1:first-line {
+    font-size: 2em;
+    font-weight: 800;
+    line-height: 2.5em;
 }
-#text-header h1 span{
-  color: #35408a;
+
+#text-header h1 span {
+    color: #35408a;
 }
-#text-header h1 sup{
-  opacity: 0.5;
+
+#text-header h1 sup {
+    opacity: 0.5;
 }
 
 /*******************************************
@@ -178,6 +177,7 @@ LIVE EVENTS
   margin-top: 5px;
   padding: 0;
 }
+
 /*******************************************
 EXPERIENCES
 *******************************************/
@@ -409,13 +409,6 @@ MEDIA
   }
 }
 
-/*******************************************
-BOOTSTRAP 3.0 COMPATIBLE CLASSES
-*******************************************/
-h1, .h1, h2, .h2, h3, .h3 {
-  margin-top: 20px; !important
-}
-
 
 /*******************************************
 COLOR CLASSES
@@ -436,22 +429,6 @@ CUSTOM RULES
 }
 #years{
   padding-left: 3px;
-}
-.tada-finit{
-  -webkit-animation: tada 2s linear;
-  animation: tada 2s linear;
-}
-.tada-infinit{
-  -webkit-animation: tada 2s infinite linear;
-  animation: tada 2s infinite linear;
-}
-
-@keyframes tada {
- 0% {transform: scale(1);}
- 10%, 20% {transform: scale(0.9) rotate(-3deg);}
- 30%, 50%, 70%, 90% {transform: scale(1.4) rotate(3deg);}
- 40%, 60%, 80% {transform: scale(1.3) rotate(-3deg);}
- 100% {transform: scale(1) rotate(0);}
 }
 
 @media (min-width: 540px) and (max-width: 767px){
