--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -40,7 +40,7 @@ body{
   transition: transform 0.3s ease-in-out;
 }
 
-#photo img{
+#photo img {
   width: 180px;
   height: 180px;
   border-radius: 50%;
@@ -75,29 +75,49 @@ body{
     opacity: 0.5;
 }
 
-/*******************************************
-DEFAULT BOX
-*******************************************/
-.box{
+
+.block{
   margin-bottom: 15px;
 }
-.box h2{
+.block h2{
   color: #35408a;
   font-size: 1.1em;
   font-weight: 700;
   text-transform: uppercase;
 }
-.box h2:before{
-  /*content: '//';*/
+.block h2:before{
   margin-right: 5px;
 }
-.box p{
-  font-size: 0.8em;
+.block p{
+  font-size: 1em;
   line-height: 1.5em;
 }
-/*******************************************
-LIVE EVENTS
-*******************************************/
+
+
+.job {
+  margin-bottom: 15px;
+}
+.job .employer {
+  font-size: 0.88em;
+  font-weight: bold;
+}
+.job .duration {
+  font-size: 0.81em;
+  opacity: 0.7;
+}
+.job .job-title {
+  font-size: 1.0em;
+  font-weight: bold;
+}
+.job .job-description {
+  font-size: 0.81em;
+}
+
+.job .job-description ul {
+  padding-left: 15px;
+}
+
+
 #live-event{
   margin-top: 20px;
   position: relative;
@@ -178,40 +198,12 @@ LIVE EVENTS
   padding: 0;
 }
 
-/*******************************************
-EXPERIENCES
-*******************************************/
-.job{
-  margin-bottom: 15px;
-}
-.job .where{
-  font-size: 0.88em;
-  font-weight: bold;
-}
-.job .year{
-  font-size: 0.81em;
-  opacity: 0.7;
-}
-.job .profession{
-  font-size: 1.0em;
-  font-weight: bold;
-}
-.job .description{
-  font-size: 0.75em;
-  line-height: 1.5em;
-}
 
-.job .description ul{
-  padding-left: 15px;
-}
-/*******************************************
-CONTACT
-*******************************************/
-.contact-item{
+.contact-item {
   width: 100%;
   float: left;
 }
-.contact-item .icon{
+.contact-item .icon {
   padding: 5px;
   color: #35408a;
   font-size: 0.9em;
@@ -219,49 +211,21 @@ CONTACT
   -webkit-transition: transform 0.2s ease-in-out;
   transition: transform 0.2s ease-in-out;
 }
-.contact-item .icon:hover{
-  opacity: 1.0;
-}
-.contact-item .icon span{
-  opacity: 0.4;
-}
-.contact-item .icon span:hover{
-  opacity: 1.0;
-  /*-moz-transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);*/
-}
-.custom-icon{
-  -moz-transition: transform 0.2s ease-in-out;
-  -webkit-transition: transform 0.2s ease-in-out;
-  transition: transform 0.2s ease-in-out;
-  height: 30px;
-  width: 30px;
-  display: inline-block;
-  margin-top: 5px;
-}
-.custom-icon:hover{
-  -moz-transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
-}
-.contact-item:last-child .icon{
+.contact-item:last-child .icon {
   border-bottom: none;
 }
-.contact-item .fa, .contact-item .fa-brands{
+.contact-item .fa, .contact-item .fa-brands {
   font-size: 1.8em;
 }
-.contact-item .title{
+.contact-item .title {
   width: 80%;
   width: calc(100% - 55px);
   font-size: 0.9em;
   font-weight: 700;
   opacity: 0.9;
-}
-.contact-item .title.only{
   margin-top: 10px;
 }
-.contact-item .description{
+.contact-item .description {
   width: 80%;
   width: calc(100% - 55px);
   font-size: 0.75em;
@@ -347,9 +311,6 @@ LANGUAGES
   margin: 10px 0;
   padding-bottom: 10px;
   border-bottom: 1px solid #eee;
-}
-#language-skills .skill .icons-big-stone{
-  background: url(../img/star-big-stone.png) no-repeat;
 }
 /*******************************************
 HOBBIES
