--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -10,7 +10,7 @@
   src: url(../webfonts/lato/Lato-Regular.ttf) format('truetype');
 }
 
-body{
+body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   font-size: 1em;
@@ -18,19 +18,19 @@ body{
   background: #ededed;
 }
 
-.container{
+.container {
   margin-top: 80px;
   margin-bottom: 15px;
   background: #fff;
 }
 
-#photo-header {
-  position: relative;
+#age {
+  padding-left: 3px;
 }
 
 #photo{
   width: 180px;
-  height: 180px;
+  height: auto;
   border-radius: 50%;
   overflow: hidden;
   padding: 5px;
@@ -41,14 +41,10 @@ body{
 }
 
 #photo img {
-  width: 180px;
-  height: 180px;
+  max-width: 95%;
+  max-height: 95%;
   border-radius: 50%;
-}
-
-#text-header {
-    position: absolute;
-    top: 20%;
+  object-fit: contain;
 }
 
 #text-header h1 {
@@ -68,19 +64,18 @@ body{
 }
 
 #text-header h1 span {
-    color: #35408a;
+    color: #02305a;
 }
 
 #text-header h1 sup {
     opacity: 0.5;
 }
 
-
 .block{
   margin-bottom: 15px;
 }
-.block h2{
-  color: #35408a;
+.block h2 {
+  color: #02305a;
   font-size: 1.1em;
   font-weight: 700;
   text-transform: uppercase;
@@ -118,86 +113,39 @@ body{
 }
 
 
-#live-event{
-  margin-top: 20px;
+.timeline {
+  border-left: 1px solid hsl(0, 0%, 90%);
   position: relative;
-  padding: 1em 0;
   list-style: none;
+  margin-left: 0.5rem;
 }
-#live-event:before {
-  width: 5px;
-  height: 100%;
+.timeline .timeline-title {
+    font-size: 1.0em;
+    font-weight: bold;
+}
+.timeline .timeline-year {
+    --bs-text-opacity: 1;
+    color: #6c757d;
+    margin-bottom: 0.5rem;
+}
+.timeline .timeline-item {
+  position: relative;
+  margin-top: 0.8rem;
+}
+.timeline .timeline-item:after {
   position: absolute;
-  left: 25px;
-  top: 0;
-  content: ' ';
   display: block;
-  background: #35408a;
-  background: -moz-linear-gradient(top,  #ffffff 0%, #35408a 7%, #35408a 89%, #ffffff 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(7%,#35408a), color-stop(89%,#35408a), color-stop(100%,#ffffff));
-  background: -webkit-linear-gradient(top,  #ffffff 0%,#35408a 7%,#35408a 89%,#ffffff 100%);
-  background: -o-linear-gradient(top,  #ffffff 0%,#35408a 7%,#35408a 89%,#ffffff 100%);
-  background: -ms-linear-gradient(top,  #ffffff 0%,#35408a 7%,#35408a 89%,#ffffff 100%);
-  background: linear-gradient(to bottom,  #ffffff 0%,#35408a 7%,#35408a 89%,#ffffff 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 );
+  top: 0;
 }
-#live-event li{
-  width: 100%;
-  z-index: 2;
-  position: relative;
-  float: left;
+.timeline .timeline-item:after {
+  background-color: #02305a;
+  margin-top: 1rem;
+  left: -38px;
+  border-radius: 50%;
+  height: 11px;
+  width: 11px;
+  content: "";
 }
-#live-event .year{
-  /*width: 10%;*/
-  background: #fff;
-  padding: 10px;
-  font-size: 0.940em;
-  font-weight: 700;
-  display: inline-block;
-}
-#live-event .description:hover{
-  -moz-transform: scale(1.03);
-  -webkit-transform: scale(1.03);
-  transform: scale(1.03);
-}
-#live-event .description{
-  width: 80%;
-  display: inline-block;
-  background: #eee;
-  margin-bottom: 10px;
-  position: relative;
-  padding: 10px 10px 0 10px;
-  border-bottom: 1px solid #ddd;
-  -moz-transition: transform 0.2s ease-in-out;
-  -webkit-transition: transform 0.2s ease-in-out;
-  transition: transform 0.2s ease-in-out;
-  border-radius: 15px;
-}
-#live-event .description:after {
-  content: '';
-  position: absolute;
-  top: 15px;
-  right: 0;
-  left: -16px;
-  height: 0;
-  width: 0;
-  border: solid transparent;
-  border-right-color: #eee;
-  border-width: 8px;
-  pointer-events: none;
-}
-#live-event .description h3{
-  font-size: 1.0em;
-  margin: 0;
-  padding: 0;
-  font-weight: 700;
-}
-#live-event .description p{
-  font-size: 0.8em;
-  margin-top: 5px;
-  padding: 0;
-}
-
 
 .contact-item {
   width: 100%;
@@ -205,11 +153,8 @@ body{
 }
 .contact-item .icon {
   padding: 5px;
-  color: #35408a;
+  color: #003d73;
   font-size: 0.9em;
-  -moz-transition: transform 0.2s ease-in-out;
-  -webkit-transition: transform 0.2s ease-in-out;
-  transition: transform 0.2s ease-in-out;
 }
 .contact-item:last-child .icon {
   border-bottom: none;
@@ -231,13 +176,10 @@ body{
   font-size: 0.75em;
   opacity: 0.7;
 }
-/*******************************************
-SKILLS
-*******************************************/
-.item-skills{
+.item-skills {
   height: 30px;
   width: 0px;
-  background: #35408a;
+  background: #003d73;
   color: #fff;
   padding: 5px 10px;
   margin-bottom: 5px;
@@ -250,12 +192,6 @@ SKILLS
   -webkit-transition: transform 0.2s ease-in-out;
   transition: transform 0.2s ease-in-out;
   border-radius: 15px;
-}
-.skills .item-skills:hover{
-  box-shadow: 0px 0px 10px #aeb7c6;
-  -moz-transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
 }
 .skills-legend{
   margin-top: 20px;
@@ -293,18 +229,10 @@ SKILLS
 .legend-right.legend:before{
   margin-right: 0;
 }
-.legend-left:nth-child(2) span{
-  /*margin-left: -25px;*/
-}
-.legend-right:nth-child(3) span{
-  /*margin-right: -20px;*/
-}
 .legend-right{
   text-align: right;
 }
-/*******************************************
-LANGUAGES
-*******************************************/
+
 #language-skills .skill{
   font-size: 0.95em;
   font-weight: 600;
@@ -312,16 +240,24 @@ LANGUAGES
   padding-bottom: 10px;
   border-bottom: 1px solid #eee;
 }
-/*******************************************
-HOBBIES
-*******************************************/
-.hobby{
+
+.stars {
+  letter-spacing: 5px;
+}
+.big-stone{
+  color: #003d73;
+}
+.grey{
+  color: #c5d0d9;
+}
+
+.hobby {
   color: #fff;
   display: inline-block;
   margin-right: 5px;
   margin-bottom: 5px;
-  padding: 5px 5px 5px 25px;
-  background: #35408a;
+  padding: 5px 10px 5px 25px;
+  background: #003d73;
   position: relative;
   font-size: 0.79em;
   -moz-transition: transform 0.2s ease-in-out;
@@ -329,7 +265,7 @@ HOBBIES
   transition: transform 0.2s ease-in-out;
   border-radius: 15px;
 }
-.hobby:before{
+.hobby:before {
   content: "\f004";
   font-family: FontAwesome;
   font-style: normal;
@@ -338,62 +274,48 @@ HOBBIES
   top: 6px;
   left: 7px;
 }
-.hobby:hover{
-  -moz-transform: scale(1.12);
-  -webkit-transform: scale(1.12);
-  transform: scale(1.12);
+
+@media screen and (max-width: 540px) {
+  #photo-header div:nth-child(1) {
+    order: 2;
+  }
 }
-/*******************************************
-MEDIA
-*******************************************/
 @media (min-width: 500px) {
-  #live-event .description{
+  #live-event .job-description {
     width: 82%;
   }
 }
 @media (min-width: 768px) {
-  #live-event .description{
+  #live-event .job-description {
     width: 85%;
   }
 }
 @media (min-width: 992px) {
-  #live-event .description{
+  #live-event .job-description {
     width: 87%;
   }
 }
 @media (min-width: 1200px) {
-  #live-event .description{
+  #photo-header {
+    position: relative;
+  }
+
+  #text-header {
+    position: relative;
+    top: 20%;
+  }
+  #live-event .job-description {
     width: 90%;
   }
-  .container{
+  .container {
     width: 1370px;
   }
 }
 
-
-/*******************************************
-COLOR CLASSES
-*******************************************/
-.big-stone{
-  color: #35408a;
-}
-.grey{
-  color: #c5d0d9;
-}
-
-
-/*******************************************
-CUSTOM RULES
-*******************************************/
-.skills-stars{
-  letter-spacing: 5px;
-}
-#years{
-  padding-left: 3px;
-}
 
 @media (min-width: 540px) and (max-width: 767px){
   #language-skills .skill{
     font-size: 0.8em;
   }
 }
+
