--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -105,7 +105,7 @@ body {
   font-weight: 600;
 }
 .job .job-description {
-  font-size: 0.81em;
+  font-size: 0.9em;
 }
 
 .job .job-description ul {
@@ -176,7 +176,7 @@ body {
   font-size: 0.75em;
   opacity: 0.7;
 }
-.item-skills {
+.skill {
   height: 30px;
   width: 0px;
   background: #003d73;
@@ -192,45 +192,6 @@ body {
   -webkit-transition: transform 0.2s ease-in-out;
   transition: transform 0.2s ease-in-out;
   border-radius: 15px;
-}
-.skills-legend{
-  margin-top: 20px;
-  opacity: 0.8;
-}
-.skills-legend:before{
-  width: 100%;
-  height: 3px;
-  position: relative;
-  content: ' ';
-  display: block;
-  margin-bottom: -13px;
-  background: #c6c6c6;
-}
-.skills-legend div{
-  width: 25%;
-  display: inline-block;
-  font-size: 0.69em;
-  color: #a9a9a9;
-  float: left;
-}
-.legend:before{
-  width: 3px;
-  height: 10px;
-  position: relative;
-  content: ' ';
-  display: block;
-  margin: auto;
-  margin-bottom: 15px;
-  background: #c6c6c6;
-}
-.legend-left.legend:before{
-  margin-left: 0;
-}
-.legend-right.legend:before{
-  margin-right: 0;
-}
-.legend-right{
-  text-align: right;
 }
 
 .language {
